force-app/main/default/objects/skilljar__Published_Path__c/skilljar__Published_Path__c.object-meta.xml
<CustomObject>
    <label>Published Path</label>
    <nameField>
        <label>Published Path Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Published Paths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>