force-app/main/default/objects/skilljar__Published_Path__c/fields/skilljar__Is_Hidden__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Is_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>