force-app/main/default/objects/skilljar__Published_Path__c/fields/skilljar__Obfuscated_id__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Obfuscated_id__c</fullName>
    <externalId>true</externalId>
    <label>Skilljar Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>