force-app/main/default/objects/skilljar__Published_Path__c/fields/skilljar__Path__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Path__c</fullName>
    <label>Path</label>
    <referenceTo>skilljar__Path__c</referenceTo>
    <relationshipLabel>Published Paths</relationshipLabel>
    <relationshipName>Published_Paths</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>